--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -231,6 +231,13 @@ Under OpenCL, the equivalent to CUDA local memory is called \textit{private memo
 Based on \cite{Behr:2009, OpenCL:2009}, Figure~\ref{fig:opencl_memory} compares the underlying implementation of the OpenCL memory hierarchy on GPUs and CPUs. Notably, on current CPUs most of the memory is reserved in System RAM, whereas the hierarchy naturally fits on the deep memory hierarchy of the GPU. 
 
 
+\begin{figure}
+\centering
+\includegraphics[width=0.7\textwidth]{gpu_content/nvidia_figures/grid-of-thread-blocks.png}
+\caption{Grid of Thread Blocks (Image courtesy of NVidia \cite{CudaGuide2013})} 
+\label{fig:grid-of-thread-blocks}
+\end{figure}
+
 
 \subsection{OpenCL vs CUDA}
 The market is volatile. Companies survive by investing margins in their next great product. If a product fails or the company faces a recall, their survival may come into question. Thus far, NVidia's CUDA has been wildly popular, but for the longest time (until May 2012) it was closed source. The closed source limited the language to NVidia hardware. As such, the OpenCL language gained popularity due to its support for AMD, Intel, mobile devices, web browsers, etc. NVidia's push to provide an open source compiler may be an attempt to regain the market share, but OpenCL appears to be on good footing. One other point: with an open source NVidia compiler, OpenCL can be optimized by the more mature NVidia compiler for their proprietary hardware. OpenCL compilers are also becoming more sophisticated at auto-optimization. 
