--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -62,14 +62,14 @@
 
 \appendix
 \include{rbffd_avoid_pole_singularities}
-\include{nvidia_figures}
-
 \input{grid_generation}
 \input{related_work}
 \input{rbffd_weights_on_sphere}
 \input{performance_content/scaling/cut_from_distributed_solver}
 \input{performance_content/optimizations}
 \input{performance_content/hardware}
+
+\include{stokes_revisited}
 
 % The BibTeX bibliography/references section.  View the file
 % 'myrefs.bib' to get a feel for what these entries may look like.
